--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
   <header>
-    <h1>📱 متجر أحمد حسين</h1>
+   
+   <h1> 🏠الرئيسية</h1>
     <nav>
       <a href="index.html">الرئيسية</a>
       <a href="product.html">المنتجات</a>
-      <a href="cart.html">🛒 السلة</a>
-      <a href="auth.html">تسجيلالدخول</a>
+      <a href="cart.html"> السلة</a>
+      <a href="auth.html">تسجيل الدخول</a>
     </nav>
   </header>
+  <div class="ahmed"><h1>📱 متجر أحمد حسين</h1></div>
+
 
   <main>
     <section class="welcome-section">
