--- a/product.html
+++ b/product.html
@@ -2,6 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>منتجاتنا</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -11,10 +12,11 @@
     <nav>
       <a href="index.html">الرئيسية</a>
       <a href="product.html">المنتجات</a>
-      <a href="cart.html">🛒 السلة</a>
+      <a href="cart.html"> السلة</a>
       <a href="auth.html">تسجيل الدخول</a>
     </nav>
   </header>
+<div class="ahmed"><h1>📱 متجر أحمد حسين</h1></div>
 
   <main>
     <section class="categories">
