--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,8 @@
 <html lang="ar">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>سلة التسوق</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,11 +12,15 @@
     <header>
         <h1>🛒 سلة التسوق</h1>
         <nav>
-            <a href="index.html">الرئيسية</a>
-            <a href="auth.html">تسجيل الدخول</a>
-        </nav>
-    </header>
-
+      <a href="index.html">الرئيسية</a>
+      <a href="product.html">المنتجات</a>
+      <a href="cart.html"> السلة</a>
+      <a href="auth.html">تسجيل الدخول</a>
+    </nav>
+  
+    
+  </header>
+  <div class="ahmed"><h1>📱 متجر أحمد حسين</h1></div>
     <main>
         <section id="cart-items" class="cart-container"></section>
         <div id="total-price" class="total-price"></div>
